@@ -235,7 +235,7 @@ void S_Init (void)
 
 	if (host_parms->memsize < 0x800000)
 	{
-		Cvar_SetValue ("loadas8bit", 1);
+		Cvar_Set ("loadas8bit", "1");
 		Con_Printf ("loading all sounds as 8bit\n");
 	}
 
@@ -246,11 +246,11 @@ void S_Init (void)
 
 	if (sfxvolume.value < 0)
 		Cvar_Set("volume", "0");
-	else if (sfxvolume.value > 1.0)
+	else if (sfxvolume.value > 1)
 		Cvar_Set("volume", "1");
 	if (bgmvolume.value < 0)
 		Cvar_Set("bgmvolume", "0");
-	else if (bgmvolume.value > 1.0)
+	else if (bgmvolume.value > 1)
 		Cvar_Set("bgmvolume", "1");
 
 	// lock the early-read cvars until Host_Init is finished
@@ -1079,8 +1079,8 @@ static void S_ToggleMute (void)
 	{
 		Cvar_SetValue("volume", sfx_mutedvol.value);
 		Cvar_SetValue("bgmvolume", bgm_mutedvol.value);
-		Cvar_SetValue("sfx_mutedvol", 0.0f);
-		Cvar_SetValue("bgm_mutedvol", 0.0f);
+		Cvar_Set("sfx_mutedvol", "0");
+		Cvar_Set("bgm_mutedvol", "0");
 		if (sfxvolume.value || bgmvolume.value)
 			Con_Printf ("Unmuted\n");
 	}
@@ -1088,8 +1088,8 @@ static void S_ToggleMute (void)
 	{
 		Cvar_SetValue("sfx_mutedvol", sfxvolume.value);
 		Cvar_SetValue("bgm_mutedvol", bgmvolume.value);
-		Cvar_SetValue("volume", 0);
-		Cvar_SetValue("bgmvolume", 0);
+		Cvar_Set("volume", "0");
+		Cvar_Set("bgmvolume", "0");
 		if (sfx_mutedvol.value || bgm_mutedvol.value)
 			Con_Printf ("Muted\n");
 	}
@@ -1098,18 +1098,18 @@ static void S_ToggleMute (void)
 static void S_VolumeDown (void)
 {
 	if (sfxvolume.value >= 0.1)
-		Cvar_SetValue("volume",sfxvolume.value - 0.1);
+		Cvar_SetValue("volume", sfxvolume.value - 0.1);
 	if (bgmvolume.value >= 0.1)
-		Cvar_SetValue("bgmvolume",bgmvolume.value - 0.1);
+		Cvar_SetValue("bgmvolume", bgmvolume.value - 0.1);
 	Con_Printf ("Volume is %3.1f\n", sfxvolume.value);
 }
 
 static void S_VolumeUp (void)
 {
 	if (sfxvolume.value <= 0.9)
-		Cvar_SetValue("volume",sfxvolume.value + 0.1);
+		Cvar_SetValue("volume", sfxvolume.value + 0.1);
 	if (bgmvolume.value <= 0.9)
-		Cvar_SetValue("bgmvolume",bgmvolume.value + 0.1);
+		Cvar_SetValue("bgmvolume", bgmvolume.value + 0.1);
 	Con_Printf ("Volume is %3.1f\n", sfxvolume.value);
 }
 
